# pyon-pyon-game

./: Cargo.toml  README.md  copy-to-git.py
doc/: engine-side-protocol.md  impl.md  protocol.md  rule.md
src/: board.rs  command_line.rs  main.rs  pos.rs  protocol.rs  uxi.rs
