[package]
name = "pyon-pyon-game"
version = "0.1.0"
authors = ["むずでょ <muzudho1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand="0.7.3"
lazy_static = "1.4.0"
clippy = { version = "*", optional = true }
atoi = "0.3.2"
num-traits = "0.2"
num-derive = "0.3"